--- a/plugin.xml
+++ b/plugin.xml
@@ -151,8 +151,7 @@ version="2.0.11">
             <Capability Name="ID_CAP_MICROPHONE"/>
         </config-file>
 
-        <source-file src="src/wp/Media.cs" />
-        <source-file src="src/wp/AudioPlayer.cs" />
+        <source-file src="src/wp/wp8/AudioRecorder.cs" />
     </platform>
 
     <!-- windows8 -->
