Renamed all stuff to use commontime repo

--- a/plugin.xml
+++ b/plugin.xml
@@ -20,72 +20,72 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android"
-id="cordova-media-with-compression"
-version="2.0.11">
+id="com.commontime.cordova.audio"
+version="0.1.0">
 
     <name>Media With Compression: Alpha Software Edition</name>
     <description>Cordova Media Plugin with MPEG 4 audio compression for iOS and Android</description>
     <license>Apache 2.0</license>
     <keywords>cordova, media, audio compression</keywords>
-    <repo>https://github.com/remoorejr/cordova-plugin-media-with-compression.git</repo>
+    <repo>https://github.com/commontime/com.commontime.cordova.audio</repo>
     <!-- <issue>https://issues.apache.org/jira/browse/CB/component/12320647</issue> -->
-	
+
 	<engines>
 		<engine name="cordova" version="&gt;=3.0.0" />
 	</engines>
-    
+
     <dependency id="cordova-plugin-file" version=">=3.0.0" />
 
     <js-module src="www/MediaError.js" name="MediaError">
         <clobbers target="window.MediaError" />
     </js-module>
-    
+
     <js-module src="www/Media.js" name="Media">
         <clobbers target="window.Media" />
     </js-module>
-    
+
     <!-- android -->
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Media" >
-                <param name="android-package" value="org.apache.cordova.media.AudioHandler"/>
+                <param name="android-package" value="com.commontime.cordova.audio.AudioHandler"/>
             </feature>
         </config-file>
-        
+
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.RECORD_AUDIO" />
             <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.READ_PHONE_STATE" />
         </config-file>
-        
-        <source-file src="src/android/AudioHandler.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/AudioPlayer.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/FileHelper.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/mp4ParserWrapper.java" target-dir="src/org/apache/cordova/media" />
+
+        <source-file src="src/android/AudioHandler.java" target-dir="src/com/commontime/cordova/audio" />
+        <source-file src="src/android/AudioPlayer.java" target-dir="src/com/commontime/cordova/audio" />
+        <source-file src="src/android/FileHelper.java" target-dir="src/com/commontime/cordova/audio" />
+        <source-file src="src/android/mp4ParserWrapper.java" target-dir="src/com/commontime/cordova/audio" />
         <source-file src="src/android/isoparser-1.1.17.jar" target-dir="libs" />
         <source-file src="src/android/aspectjrt-1.8.8.jar" target-dir="libs" />
 
      </platform>
-     
+
      <!-- amazon-fireos -->
     <platform name="amazon-fireos">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Media" >
-                <param name="android-package" value="org.apache.cordova.media.AudioHandler"/>
+                <param name="android-package" value="com.commontime.cordova.audio.AudioHandler"/>
             </feature>
         </config-file>
-        
+
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.RECORD_AUDIO" />
             <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.READ_PHONE_STATE" />
         </config-file>
-        
-        <source-file src="src/android/AudioHandler.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/AudioPlayer.java" target-dir="src/org/apache/cordova/media" />
-        <source-file src="src/android/FileHelper.java" target-dir="src/org/apache/cordova/media" />
+
+        <source-file src="src/android/AudioHandler.java" target-dir="src/com/commontime/cordova/audio" />
+        <source-file src="src/android/AudioPlayer.java" target-dir="src/com/commontime/cordova/audio" />
+        <source-file src="src/android/FileHelper.java" target-dir="src/com/commontime/cordova/audio" />
      </platform>
 
 
@@ -102,10 +102,10 @@ version="2.0.11">
      </platform>
 
      <!-- ios -->
-     <platform name="ios">    
+     <platform name="ios">
          <config-file target="config.xml" parent="/*">
              <feature name="Media">
-                 <param name="ios-package" value="CDVSound" /> 
+                 <param name="ios-package" value="CDVSound" />
              </feature>
          </config-file>
          <header-file src="src/ios/CDVSound.h" />
